--- a/app/src/main/res/layout/fragment_item_detail.xml
+++ b/app/src/main/res/layout/fragment_item_detail.xml
@@ -23,7 +23,7 @@
     tools:context=".ItemDetailFragment">
 
     <TextView
-        android:id="@+id/item_name"
+        android:id="@+id/item_title"
         style="@style/Widget.Inventory.TextView"
         android:layout_width="wrap_content"
         app:layout_constraintStart_toStartOf="parent"
@@ -31,12 +31,12 @@
         tools:text="Screwdrivers" />
 
     <TextView
-        android:id="@+id/item_price"
+        android:id="@+id/item_date"
         style="@style/Widget.Inventory.TextView"
         android:layout_width="wrap_content"
         android:layout_marginTop="@dimen/margin"
         app:layout_constraintStart_toStartOf="parent"
-        app:layout_constraintTop_toBottomOf="@+id/item_name"
+        app:layout_constraintTop_toBottomOf="@+id/item_title"
         tools:text="$5.50" />
 
     <TextView
@@ -44,20 +44,20 @@
         style="@style/Widget.Inventory.TextView"
         android:layout_width="wrap_content"
         android:text="@string/quantity"
-        app:layout_constraintBaseline_toBaselineOf="@+id/item_count"
-        app:layout_constraintEnd_toStartOf="@+id/item_count"
+        app:layout_constraintBaseline_toBaselineOf="@+id/item_content"
+        app:layout_constraintEnd_toStartOf="@+id/item_content"
         app:layout_constraintHorizontal_bias="0.5"
         app:layout_constraintStart_toStartOf="parent" />
 
     <TextView
-        android:id="@+id/item_count"
+        android:id="@+id/item_content"
         style="@style/Widget.Inventory.TextView"
         android:layout_width="0dp"
         android:layout_marginStart="@dimen/margin_between_elements"
         android:layout_marginTop="@dimen/margin"
         app:layout_constraintEnd_toEndOf="parent"
         app:layout_constraintStart_toEndOf="@+id/item_count_label"
-        app:layout_constraintTop_toBottomOf="@+id/item_price"
+        app:layout_constraintTop_toBottomOf="@+id/item_date"
         tools:text="5" />
 
     <Button
@@ -69,7 +69,7 @@
         app:layout_constraintBottom_toTopOf="@+id/delete_item"
         app:layout_constraintEnd_toEndOf="parent"
         app:layout_constraintStart_toStartOf="parent"
-        app:layout_constraintTop_toBottomOf="@+id/item_count" />
+        app:layout_constraintTop_toBottomOf="@+id/item_content" />
 
     <Button
         android:id="@+id/delete_item"
